2006-05-05  Peter Dennis Bartok  <pbartok@novell.com> 

	* ListView.cs:
	  - Moved adding of Implicit controls into .ctor. That way, subsequent
	    creation of the controls will not cause them to think they are 
	    toplevel windows (fixes #78200 header problem)
	  - Added 2.0 ShowGroups and UseCompatibleStateImageBehaviour
	  - Switched visibility setting of header control to use internal field
	    to avoid triggering handle creation
	  - Now checking if handle is created before causing a refresh when items
	    are added (This makes us now match handle creation time with MS)
	* Splitter.cs: Removed loading of private splitter cursor, switched to
	  Cursors version now that that is loading the right ones
	* Cursors.cs: Load proper splitter cursors from resources
	* Cursor.cs: Added second method of loading resource cursors for the 
	  VS.Net users amongst us

2006-05-05  Mike Kestner  <mkestner@novell.com>

	* ListView.cs: give header_control a minimum size based on the
	ListView size.

2006-05-05  Peter Dennis Bartok  <pbartok@novell.com> 

	* XplatUIX11.cs: WS_EX_TOPMOST requires window to be on top. A dock
	  window seems to do that with metacity, so set that type. (#78120)

2006-05-05  Mike Kestner  <mkestner@novell.com>

	* ListViewItem.cs: fix Details mode checkbox layout bug.
	* ThemeWin32Classic.cs: draw a ListView column header for unused space
	at the end of the header, if it exists. [Fixes for #78200]

2006-05-04  Jackson Harper  <jackson@ximian.com>

	* MdiClient.cs: Add a helper property to get the container form.
	* MdiWindowManager.cs: We have to make sure to use the menu origin
	when drawing the icons and buttons, this fixes maximized window
	icons/buttons on win32.
	* InternalWindowManager.cs: Reset the restore captions when a
	window goes from Maximized to Minimized and vice versa. Move the
	DrawMaximizedButtons into the MdiWindowManager source, tool
	windows can't be maximized. NOTE: This could use a little
	refactoring if time ever permits.